# OpenGL-Game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  OpenGL-Game.code-workspace  premake5.lua  workspace.code-workspace
OpenGL-Game/: CMakeLists.txt  Makefile  premake5.lua
OpenGL-Game/Assets/Scenes/: Scene.yaml
OpenGL-Game/Assets/Shaders/: Shader.glsl
OpenGL-Game/Source/: ComponentPool.cpp  ComponentPool.h  Components.h  Defines.h  Entity.h  Game.cpp  Game.h  Main.cpp  Scene.cpp  Scene.h  SceneRegistry.cpp  SceneRegistry.h  SceneSerializer.cpp  SceneSerializer.h
OpenGL-Game/Source/Engine/: Application.cpp  Application.h  ApplicationEvents.h  DeltaTime.h  Event.h  Input.cpp  Input.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  Renderer2D.cpp  Renderer2D.h  ResourceLibrary.h  Script.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
OpenGL-Game/Source/Engine/Particles/: ParticleGenerator.cpp  ParticleGenerator.h
OpenGL-Game/Source/Engine/Physics/: PhysicsColider.h  PhysicsSystem.cpp  PhysicsSystem.h
OpenGL-Game/Source/Game/: BlockAligner.cpp  BlockAligner.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h
OpenGL-Game/Source/Game/Scripts/: BackGround.h  BallScript.h  PlayerPaddle.h
OpenGL-Game/Source/Scene/: ComponentPool.cpp  ComponentPool.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneRegistry.cpp  SceneRegistry.h
Project/: CMakeLists.txt
Sandbox/: CMakeLists.txt
